--- a/css/css1/stylish.css
+++ b/css/css1/stylish.css
@@ -80,6 +80,7 @@ a {
 .menyu:hover {
     background-color: black;
 }
+
 /* stylish2 */
 .orta {
     margin-top: 180px
@@ -135,12 +136,14 @@ a {
     transition: 1sn;
     background-color: #1a1e20;
 }
+
 /* stylish3 */
 .back {
     width: 100%;
     height: 1200px;
     background-color: #1D809F;
 }
+
 .offer {
     margin-top: 100px;
 }
@@ -153,6 +156,7 @@ a {
     font-weight: bold;
     margin-bottom: 100px;
 }
+
 .bir {
     color: rgb(224, 164, 12);
     text-transform: uppercase;
@@ -163,6 +167,7 @@ a {
     font-size: 100px;
     color: white;
 }
+
 .icons {
     text-align: center;
     background-color: #fff;
@@ -171,23 +176,27 @@ a {
     width: 200px;
     border-radius: 50%;
 }
+
 .blue h1 {
     margin-top: 20px;
     color: white;
     font-family: "Source Sans 3", sans-serif;
     font-size: 40px;
 }
+
 .blue p {
     color: rgb(214, 208, 208);
     font-family: "Source Sans 3", sans-serif;
     font-size: 25px;
     font-weight: light;
 }
+
 .icons i {
     font-size: 75px;
     font-weight: 800;
     line-height: 210px;
 }
+
 .blue div {
     margin: 50px;
     text-align: center;
@@ -195,6 +204,7 @@ a {
     margin-left: 340px;
 
 }
+
 /* stylish4 */
 .main2 {
     background: url(https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/bg-callout.jpg);
@@ -204,13 +214,15 @@ a {
     width: 100%;
     height: 1200px;
     cursor: pointer;
-    text-align: center ;
-    
+    text-align: center;
+
 }
+
 .fon2 {
     text-align: center;
     padding-top: 300px;
 }
+
 .text3 {
     text-align: center;
     font-family: "Source Sans 3", sans-serif;
@@ -218,6 +230,7 @@ a {
     color: #212529;
     padding: 10px;
 }
+
 .text4 {
     text-align: center;
     font-family: "Source Sans 3", sans-serif;
@@ -225,9 +238,11 @@ a {
     color: #212529;
     padding: 10px;
 }
+
 .button3 {
     margin-top: 80px;
 }
+
 .button3 {
     width: 250px;
     background-color: #1d809f;
@@ -242,48 +257,59 @@ a {
     margin-top: 80px;
     text-transform: capitalize;
 }
+
 .button2:hover {
     background-color: #39515e;
 }
+
 /* stylish5 */
-.text5  {
+.text5 {
     padding-top: 250px;
 }
+
 .text5 {
     font-size: 35px;
     text-align: center;
     font-family: "Source Sans 3", sans-serif;
     color: #ecb807;
 }
+
 .text6 {
     font-size: 100px;
     text-align: center;
     font-family: "Source Sans 3", sans-serif;
     color: #212529;
 }
+
 /* sekiller */
-.saxla{
-    text-align: center; 
+.saxla {
+    text-align: center;
+    width: 100%;
+    height: 100%;
 }
+
 .mavi {
     width: 35%;
     height: 700px;
     position: relative;
     display: inline-block;
     clip-path: inset(0%);
-    transition: 0.8sn;
+    transition: 1sn;
     font-family: "Source Sans 3", sans-serif;
     color: white;
 }
-.sekil{
+
+.sekil {
     width: 100%;
     height: 100%;
 }
+
 .sekil img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .fon1 {
     background-color: rgb(29, 128, 159, 0);
     width: 100%;
@@ -293,32 +319,40 @@ a {
     left: 0px;
     transition: 0.8s;
     text-align: justify;
-    margin-top: 500px;
+
 }
-.mavi:hover .fon1 {
-    background-color: rgba(27, 122, 151, 0.7);
+.fon1:hover  {
+    background-color: #1D809F;
+    width: 100%;
+    height: 100%;
+    opacity: 50%;
 }
+
 .mavi:hover {
     clip-path: inset(5%);
 }
+
 .mavi2 {
     position: relative;
     display: inline-block;
     width: 35%;
     height: 700px;
     clip-path: inset(0%);
-    transition: 0.8sn;
+    transition: 1sn;
     font-family: "Source Sans 3", sans-serif;
     color: white;
 }
+
 .sekil2 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .mavi2:hover {
     clip-path: inset(5%);
 }
+
 .mavi3 {
     position: relative;
     display: inline-block;
@@ -329,14 +363,17 @@ a {
     font-family: "Source Sans 3", sans-serif;
     color: white;
 }
+
 .sekil3 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .mavi3:hover {
     clip-path: inset(5%);
 }
+
 .mavi4 {
     position: relative;
     display: inline-block;
@@ -347,22 +384,27 @@ a {
     font-family: "Source Sans 3", sans-serif;
     color: white;
 }
+
 .sekil4 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .mavi4:hover {
     clip-path: inset(5%);
 }
+
 /* stlish6 */
-.back2{
+.back2 {
+    margin-top: 200px;
     padding-top: 200px;
     width: 100%;
-    height: 500px;
+    height: 400px;
     background-color: #1D809F;
 }
-.on p{
+
+.on p {
     text-align: center;
     font-size: 60px;
     font-weight: bold;
@@ -370,19 +412,23 @@ a {
     color: white;
     cursor: pointer;
 }
+
 .onlar div {
     margin-top: 30px;
     text-align: center;
     display: inline-block;
 }
-.onlar {
-    text-align: center; 
-}
-/* click */
-.ona a{
-    color: black;}
 
-.ona{
+.onlar {
+    text-align: center;
+}
+
+/* click */
+.ona a {
+    color: black;
+}
+
+.ona {
     background-color: white;
     line-height: 100px;
     font-family: "Source Sans 3", sans-serif;
@@ -391,12 +437,14 @@ a {
     border-radius: 10px;
     cursor: pointer;
     transition: 1s;
-    margin-right: 80px; 
+    margin-right: 80px;
 }
-.onu a{
+
+.onu a {
     color: white;
 }
-.onu{
+
+.onu {
     background-color: #1a1e20;
     line-height: 100px;
     height: 100px;
@@ -406,73 +454,82 @@ a {
     cursor: pointer;
     transition: 1s;
 }
+
 /* stylish7 */
-.map{
+.map {
     width: 100%;
     height: 950px;
 }
-.map iframe{
+
+.map iframe {
     pointer-events: none;
     height: 100%;
     width: 100%;
     border: 0;
 }
+
 /* stylish8 */
-.footer text{
+.footer text {
     height: 213px;
     width: 100%;
     margin: 0;
     padding: 0;
 }
-.son div{
+
+.son div {
     display: inline-block;
     text-align: center;
 }
-.link2{
-        height: 120px;
-        width: 120px;
-        margin: 20px;
-        line-height: 120px;
-        font-size: 50px;
-        background-color: #1D809F;
-        border-radius: 50%
+
+.link2 {
+    height: 120px;
+    width: 120px;
+    margin: 20px;
+    line-height: 120px;
+    font-size: 50px;
+    background-color: #1D809F;
+    border-radius: 50%
 }
-.face{
+
+.face {
     font-size: 50px;
     text-align: center;
 }
-.link3{
-        height: 120px;
-        width: 120px;
-        margin: 20px;
-        line-height: 120px;
-        font-size: 50px;
-        background-color: #1D809F;
-        border-radius: 50%
+
+.link3 {
+    height: 120px;
+    width: 120px;
+    margin: 20px;
+    line-height: 120px;
+    font-size: 50px;
+    background-color: #1D809F;
+    border-radius: 50%
 }
-.twitter{
+
+.twitter {
     font-size: 50px;
     text-align: center;
 }
-.link4{
-        height: 120px;
-        width: 120px;
-        margin: 20px;
-        line-height: 120px;
-        font-size: 50px;
-        background-color: hsl(194, 69%, 37%);
-        border-radius: 50%
+
+.link4 {
+    height: 120px;
+    width: 120px;
+    margin: 20px;
+    line-height: 120px;
+    font-size: 50px;
+    background-color: hsl(194, 69%, 37%);
+    border-radius: 50%
 }
-.git{
+
+.git {
     font-size: 50px;
     text-align: center;
 }
-.sontext{
+
+.sontext {
     text-align: center;
     margin-top: 100px;
     font-family: "Source Sans 3", sans-serif;
     color: #6c757d;
     font-size: 20px;
 }
-
-
