--- a/css/css7/animation.css
+++ b/css/css7/animation.css
@@ -38,8 +38,8 @@ body {
 		background-repeat: no-repeat;
 		background-size: 50% 50%, 50% 50%;
 		background-position: 0 0, 100% 0, 100% 100%, 0 100%;
-		background-image: linear-gradient(#399953, #399953), linear-gradient(#fbb300, #fbb300), linear-gradient(#d53e33, #d53e33), linear-gradient(#377af5, #377af5);
 		animation: rotate 4s linear infinite;
+		background: conic-gradient(red, orange, yellow, green, blue);
 	}
 	
 	&::after {
