--- a/css/css7/animation.css
+++ b/css/css7/animation.css
@@ -3,10 +3,12 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-    background-color: rgb(73, 71, 71);
+	background-color: rgb(73, 71, 71);
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
 	box-sizing: border-box;
 }
 
@@ -24,8 +26,8 @@ body {
 	border-radius: 10px;
 	overflow: hidden;
 	padding: 2rem;
-    
-	
+
+
 	&::before {
 		content: '';
 		position: absolute;
@@ -41,7 +43,7 @@ body {
 		animation: rotate 4s linear infinite;
 		background: conic-gradient(red, orange, yellow, green, blue);
 	}
-	
+
 	&::after {
 		content: '';
 		position: absolute;
@@ -57,16 +59,18 @@ body {
 
 @keyframes opacityChange {
 	50% {
-		opacity:1;
+		opacity: 1;
 	}
+
 	100% {
 		opacity: .5;
 	}
 }
-h3{
 
-   color: #fbb300;
-   text-align: center;
-   padding-top: 80px;
-   letter-spacing: 5px;
+h3 {
+
+	color: #fbb300;
+	text-align: center;
+	padding-top: 80px;
+	letter-spacing: 5px;
 }
